RESOLVED FIXED273314
Fix the remaining !ENABLE(VIDEO) build failures
https://bugs.webkit.org/show_bug.cgi?id=273314
Summary Fix the remaining !ENABLE(VIDEO) build failures
q66
Reported 2024-04-26 04:14:04 PDT
I've been building with !ENABLE(VIDEO) lately and it recently regressed, with a variety of failures in different places. Some of it was fixed in https://github.com/WebKit/WebKit/commit/ea2be408f27eb1009bbde7b0a2496018d4ca5e86 but not all of it (and it introduced another problem in WebCoreArgumentCoders.serialization.in).
Attachments
q66
Comment 1 2024-04-26 04:24:31 PDT
Radar WebKit Bug Importer
Comment 2 2024-05-03 04:15:16 PDT
EWS
Comment 3 2024-05-23 20:29:25 PDT
Committed 279252@main (da1bf6c66583): <https://commits.webkit.org/279252@main> Reviewed commits have been landed. Closing PR #27796 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.