Fix remaining !ENABLE(VIDEO) build failures https://bugs.webkit.org/show_bug.cgi?id=273314

Reviewed by NOBODY (OOPS!).

Recent refactorings introduced the breakages. They were fixed
partially in ea2be408f27eb1009bbde7b0a2496018d4ca5e86 but not
entirely.

Notably, a misplacement of an #endif in WebCoreArgumentCoders
resulted in strange IPC errors.

* Source/WebCore/Modules/WebGPU/GPUDevice.cpp:
* Source/WebCore/Modules/WebGPU/GPUDevice.h:
* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::interactionRegionForRenderedRegion):
* Source/WebCore/page/Page.cpp:
(WebCore::Page::shouldBlockLayerTreeFreezingForVideo):
* Source/WebCore/platform/graphics/MediaResourceSniffer.cpp:
* Source/WebCore/platform/graphics/MediaResourceSniffer.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::startObservingNowPlayingMetadata):
(WebKit::WebPage::stopObservingNowPlayingMetadata):